Correcion ansible en master

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
      <ul>
 
          <li> Vagrant: Gerenciando máquinas virtuales </li>
-         <li> Ansible: Prueba </li>
          <li> Docker: Creando containers </li>
+         <li> Ansible: Prueba en master </li>
          <li> Integracion continua : Madurez y Productividad </li>
      </ul>
 </body>
