--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
          <li> Vagrant: Gerenciando máquinas virtuales </li>
          <li> Docker: Creando containers </li>
-         <li> Ansible: Prueba en master CON CODIGO</li>
+         <li> Ansible: Prueba en master </li>
          <li> Integracion continua : Madurez y Productividad </li>
      
      </ul>
