Modificando nombre curso de integracion continua

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
          <li> Vagrant: Gerenciando máquinas virtuales </li>
          <li> Docker: Creando containers </li>
          <li> Ansible: Prueba en master </li>
-         <li> Integracion continua : Madurez y Productividad </li>
+         <li> Integracion continua : Madurez y Productividad y Programar </li>
          <li> Kubernetes: Introducción a la orquestación de containers </li>
      </ul>
 </body>
